--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -13,6 +13,10 @@
     letter-spacing: -1px;
 }
 
+.btn-margin-custom {
+  margin-bottom: 20px;
+}
+
 .hero-unit {
     position: relative;
     padding: 30px 15px;
